# My_audioplayer

./: .gitignore  Readme.md
My_player/: CMakeLists.txt  Main_icon.rc  My_player.pro  clickslider.cpp  clickslider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
